fixed bugg with portfolio animation bug with visibility

--- a/src/Portfolio/Portfolio.css
+++ b/src/Portfolio/Portfolio.css
@@ -3,7 +3,7 @@
     margin: 20px;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: repeat(4, 62.5px);
+    grid-template-rows: repeat(4, 60px);
     text-align: center;
     visibility: hidden;
 }
@@ -21,8 +21,9 @@
     background-color: var(--color1);
     color:white;
     max-width: 250px;
-    padding: 10px;
+    padding: 3px, 8px;
     position: relative;
+    font-size: large;
 }
 
 #projectAbout {
@@ -34,7 +35,7 @@
 .tab {
     background-color: var(--color2);
     color: white;
-    line-height: 50px;
+    line-height: 56px;
     border-radius: 15px;
     margin-right: 5px;
     margin-bottom: 5px;
